RISOLTI alcuni ERRORI LINTER